Задание по HTML

--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,21 @@
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Заоловок первого уровня</h1>
+        <h2>Заголовок второго уровня</h2>
+        <ol>
+            <li><a href="https://online.sbis.ru">Зайди сюда</a></li>
+            <li>
+                <a href="https://new-edu.tensor.ru/course/view.php?id=157"
+                    >Нет, сюда!</a
+                >
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=sqRHzufNMoY"
+                    >Да нет же! Сюда!</a
+                >
+            </li>
+        </ol>
+    </body>
 </html>
